Adiciona arquivo style.css com o codigo css da pag

--- a/bloco_3/dia_2/index.html
+++ b/bloco_3/dia_2/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-      h1{
+      /*h1{
         width: 65px;
         color: orange;
         font-family: sans-serif;
@@ -38,7 +39,7 @@
 
       #l3{
         background-color: brown;
-      }
+      } */
 
     </style>
   </head>
@@ -51,7 +52,9 @@
       <li id="l3">Marrom</li>
     </ul>
 
-
+<!-- Exercício da parte 3
+      Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo.
+    -->
     <!-- Exercícios da parte 2
  - Modifique o família do h1 para sans-serif
  - Deixe o parágrafo com o font-weight 600
