--- a/bloco_3/dia_4/exercise3.4.html
+++ b/bloco_3/dia_4/exercise3.4.html
@@ -8,8 +8,27 @@
   <body>
     <!--insira os elementos aqui-->
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+        <h1 id="title">Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
+
+    <nav>
+        <a href="#title">Página Inícial</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
+    </nav>
     
+    <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <p>
+            Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.
+        </p>
+        <img src="stomatopoda.jpg" alt="Animal Stomatopoda no fundo do mar">
+        <p>
+            Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho.
+        </p>
+        <p>
+            Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas não são animais fáceis de se observar pelos seus hábitos mais furtivos. Devem ser manuseados com muita cautela pois são animais preparados para se defender com força, caso sejam incomodados.
+        </p>
+    </article>
   </body>
 </html>
