estiliza nav da pagina

--- a/bloco_3/dia_4/exercise3.4.html
+++ b/bloco_3/dia_4/exercise3.4.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style3.4.css">
+    <title>Stomatopoda!!!</title>
   </head>
   <body>
     <!--insira os elementos aqui-->
-    <header>
+    <header class="nav-main">
         <h1 id="title">Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
 
-    <nav>
-        <a href="#title">Página Inícial</a>
-        <a href="#">Sobre</a>
-        <a href="#">Contato</a>
+    <nav class="nav-main">
+        <a class="nav-each" href="#title">Página Inícial</a>
+        <a class="nav-each" href="#">Sobre</a>
+        <a class="nav-each" href="#">Contato</a>
     </nav>
     <main>
       <article>
@@ -95,7 +96,7 @@
                 São animais que apresentam comportamentos sociais muito variados, desde ameaças visuais contra predadores até comportamentos de côrte. De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat.
             </p>
             <p>
-                As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720km/h) e uma força de impacto de 60 kg/cm².[3] Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
+                As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, <span>um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720km/h)</span> e uma força de impacto de 60 kg/cm².[3] Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
             </p>
         </section>
 
